# Chang-Agent

./: .gitignore  DEVELOPMENT.md  DEVELOPMENT_WORK_REPORT.md  README.md  pyproject.toml
change_agent/: __init__.py  action_parser.py  agent.py  coordinates.py  environment.py  executor.py  perturbations.py  runner.py  state.py  trajectory.py  verifier.py  verifier_model.py  verifier_protocol.py  verifier_regions.py
configs/: default.json  runtime_cpu.json  runtime_gpu_l20.json
doc/: DEVELOPMENT.md  DEVELOPMENT_WORK_REPORT.md  GROUNDING_PAPERS_ANALYSIS.md  ablation_parameters.txt  ca0721_12_direct_rubric_trajectory_analysis.md  ca0721_13_som_ablation_analysis.md  ca0722_11_qwen37_thinking_verifier_trajectory_bilingual.md  ca0722_1_hybrid_workflow_error_table.csv  closed_loop_issue_analysis_20260719.md  proposal_ablation.md  verifier_protocol_maintenance.md
tests/: test_action_parser.py  test_audit_runtime.py  test_bailian_adapter.py  test_direct_verifier.py  test_environment.py  test_executor_locality.py  test_mask_processing.py  test_qwen3vl_adapter.py  test_qwen3vl_verifier.py  test_replay_verifier_challenge.py  test_runner_action_protocol.py  test_sam3_adapter.py  test_segagent_adapter.py  test_stage_backends.py  test_staged_verifier.py  test_subprocess_initialization.py  test_subprocess_point_history.py  test_trajectory_visualization.py  test_verifier_regions.py  test_verifier_training_schema.py
tools/: build_verifier_samples.py  collect_runtime_manifest.py  download_qwen3vl.py  probe_ca0721_bailian_node.sh  qwen3vl_smoke.py  replay_verifier_challenge.py  (+27 more)
(+11 files in other folders)
